# Poisson

./: .CMakeLists.txt.swp  .gitignore  3  CMakeLists.txt  Dockerfile  N1.txt  N2.txt  cmake-format.json  docker-compose.yml  result.pvsm  sol1.vtk  sol2.vtk
app/: .main.cpp.swp  .thread_benchmark.cpp.swp  .trythread.cpp.swp  CMakeLists.txt  main.cpp  thread_benchmark.cpp  trythread.cpp
apps/: .main.cpp.swp  CMakeLists.txt  N1.txt  N2.txt  countn.cpp  main.cpp  overlap.cpp  test  thread_benchmark.cpp
create_problem/: .poisson.cpp.swp  poisson.cpp  poisson.hpp
headers/: CsrMatrix.hpp
libs/: CMakeLists.txt
libs/PoissonProblem/: CMakeLists.txt
libs/PoissonProblem/Poisson/include/: Poisson.hpp
libs/PoissonProblem/Poisson/src/: .Poisson.cpp.swp  Poisson.cpp
libs/PoissonProblem/Schwartz/: .splitdomain.cpp.swp
libs/PoissonProblem/matrix_solver/include/: AmgclSolver.hpp
libs/PoissonProblem/matrix_solver/src/: AmgclSolver.cpp
libs/PoissonProblem/shwartz/include/: .shwartz.hpp.swp  shwartz.hpp
libs/PoissonProblem/shwartz/src/: .shwartz.cpp.swo  .shwartz.cpp.swp  shwartz.cpp
libs/PoissonProblem/test/: Poisson_test.cpp  matrix_test.cpp
libs/PoissonProblem/vtk/include/: vtk_saver.hpp
libs/PoissonProblem/vtk/src/: .vtk_saver.cpp.swp  vtk_saver.cpp
libs/include/: poisson.hpp
libs/poisson_problem/: CMakeLists.txt
libs/poisson_problem/ddm/: global_solve.cpp  global_solve.hpp  jacobi_solve.cpp  jacobi_solve.hpp  local_solve.cpp  local_solve.hpp  seidel_solve.cpp  seidel_solve.hpp
libs/poisson_problem/grid/: grid.cpp  grid.hpp
libs/poisson_problem/mat/: csr_matrix.cpp
libs/poisson_problem/mat_solver/: csr_mat_solver.cpp  csr_mat_solver.hpp
libs/poisson_problem/norms/: norms.cpp  norms.hpp
libs/poisson_problem/slae_build/: poisson_slae_build.cpp  poisson_slae_build.hpp
libs/poisson_problem/test/: CMakeLists.txt  csr_mat_solver_test.cpp  csr_matrix_test.cpp
libs/poisson_problem/vector_operations/: vector_operations.cpp  vector_operations.hpp
libs/poisson_problem/vtk/: vtk_save.cpp  vtk_save.hpp
libs/src/: AmgclSolver.cpp  CsrMatrix.cpp  poisson.cpp
residuals/: Jacobi_const_res.csv  Jacobi_res.csv
scripts/: attach_to_container.sh  rebuild_container.sh
scripts/init/: init_container.sh
src/:  dzpm.cpp  CMakeLists.txt  CsrMatrix.cpp
src/poisson_problem_solver/: CMakeLists.txt
src/poisson_problem_solver/grid/: grid_regular2d.hpp
src/poisson_problem_solver/mat/: csr_matrix.cpp
src/poisson_problem_solver/mat_solver/: csr_mat_solver.cpp  csr_mat_solver.hpp
src/poisson_problem_solver/schwarz_methods/: jacobi_schwarz_solver.cpp  jacobi_schwarz_solver.hpp  original_schwarz_solver.cpp  original_schwarz_solver.hpp  schwarz_solver.cpp  schwarz_solver.hpp  subdomain.cpp  subdomain.hpp
src/poisson_problem_solver/utils/: grid_utils.hpp  make_masks.hpp  norms.hpp  tictoc.cpp  tictoc.hpp  vtk.cpp  vtk.hpp
src/test/: CMakeLists.txt  main_test.cpp  main_test.hpp  mat_solver_test.cpp  mat_test.cpp  schwarz_solver_test.cpp  subdomain_test.cpp
src/test/examples/: four_squares.cpp  overlap_convergence_study.cpp  parallel_jacobi.cpp  ring_subdomain.cpp  test_functions.hpp  two_equal_rectangles.cpp
src/test/performance_analysis/rectangles/: partition.cpp
tests/: CMakeLists.txt  csr_matrix_test.cpp  poisson_test.cpp  solver_test.cpp
